# pemPy

./: .gitignore  README.md  current_monitor.py  current_monitor_HALL.py  loadcell_calibrate_Tcomp.py  loadcell_example.py  pemcell  pemcell_20191210  pemcell_config_EXAMPLE.txt  pemcell_config_TEMPLATE.txt  pemcell_config_testy.txt  psu_testy.py  pyproject.toml  voltage_current_monitor.py  voltagemonitor.py
classes/: ACS712_HALLSENSOR.py  PPS_POWERSUPPLY.py  hx711_loadcell.py  loadcell_HX711.py  pps_powersupply.py
obsolete/: current_monitor_PSU.py  loadcell_example.py  pemcell
src/pempy/: __init__.py
src/pempy/cli/: pemcell.py
src/pempy/loadcell/: __init__.py  hx711.py
src/pempy/powersupply/: __init__.py  base.py  pps.py  riden.py
tests/: conftest.py  test_hx711.py  test_powersupply.py
